--- a/style.css
+++ b/style.css
@@ -41,12 +41,17 @@ main{
     align-items: center;
     color: white;
 }
-.show,input{
+.show{
     font-size: 2rem;
     font-family: 'Inconsolata', monospace;
     color: white;
 }
-
+input{
+    font-family: 'Inconsolata', monospace;
+    font-size: 0.8rem;
+    width: 10rem;
+    height: 1rem;
+}
 input:focus{
     outline: none;
 }
