--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0px;
     box-sizing: border-box;
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     align-items: center;
     background-color:rgb(23 ,55, 110);
@@ -129,5 +129,5 @@ span{
     }
     select{
         font-size:1rem;
-        height:1rem;
+        height:1.3rem;
     }
